# ruststream

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  askama.toml  cloudbuild.yaml  streamers.json
resources/css/: Besley.css  home.css  style.css
src/: main.rs
src/controllers/: mod.rs
src/services/: mod.rs
src/view_models/: mod.rs
src/views/: home.html
src/views/template/: template.html
