[package]
name = "rust-stream"
version = "0.1.0"
authors = ["Martijn Groeneveldt <martijn.groeneveldt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^1.0.3"
actix-files = "0.1.3"
askama = "^0.8"
reqwest = "^0.9.18"
dotenv = "0.14.1"
serde = { version = "^1.0.97", features = ["derive"] }
serde_json = "^1.0.40"